--- a/2020.html
+++ b/2020.html
@@ -58,34 +58,34 @@ a:hover {
 <p class="style3">&nbsp;&nbsp;&nbsp;</p>
 <p class="style32">&nbsp;</p>
 <div style="position: absolute; width: 1077px; height: 60px; z-index: 3; left: 64px; top: 32px; bottom: 414px;" id="layer6" class="style15">
-  <p><img src="a.jpg" width="125" height="125" />&nbsp;<span class="style22">仁义礼智信 正大自光明 &nbsp;</span>&nbsp;&nbsp;<span class="STYLE34">2020届6班</span>&nbsp;&nbsp; <a href="桃李天下.html">返回前页</a>&nbsp;&nbsp;
+  <p><img loading="lazy" src="a.jpg" width="125" height="125" />&nbsp;<span class="style22">仁义礼智信 正大自光明 &nbsp;</span>&nbsp;&nbsp;<span class="STYLE34">2020届6班</span>&nbsp;&nbsp; <a href="桃李天下.html">返回前页</a>&nbsp;&nbsp;
     <a href="czjszbzrsp.html"></a>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;</p>
 </div>
 <p>&nbsp;</p>
-<p><img src="20206/突击1.jpg" width="350" height="262" /><img src="20206/突击2.jpg" width="350" height="262" /></p>
-<p><img src="20206/突击3.jpg" width="350" height="262" /><img src="20206/突击5.jpg" width="350" height="262" /></p>
-<p><img src="20206/突击12.jpg" width="350" height="262" /><img src="20206/突击15.jpg" width="450" height="310" /></p>
-<p><img src="20206/突击19.jpg" width="350" height="262" /><img src="20206/突击22.jpg" width="350" height="262" /></p>
-<p><img src="20206/突击32.jpg" width="350" height="262" /><img src="20206/突击37.jpg" width="350" height="262" /></p>
-<p><img src="20206/突击35.jpg" width="350" height="262" /><img src="20206/突击40.jpg" width="350" height="262" /></p>
-<p><img src="20206/突击42.jpg" width="350" height="262" /><img src="20206/突击45.jpg" width="350" height="233" /></p>
-<p><img src="20206/突击49.jpg" width="350" height="233" /><img src="20206/突击50.jpg" width="350" height="233" /></p>
-<p><img src="20206/突击73.jpg" width="350" height="262" /><img src="20206/突击66.jpg" width="350" height="262" /></p>
-<p><img src="20206/突击75.jpg" width="350" height="262" /><img src="20206/突击83.jpg" width="350" height="262" /></p>
-<p><img src="20206/突击90.jpg" width="233" height="310" /><img src="20206/突击88.jpg" width="233" height="310" /><img src="20206/突击92.jpg" width="233" height="310" /></p>
-<p><img src="20206/突击99.jpg" width="350" height="262" /><img src="20206/突击103.jpg" width="350" height="262" /></p>
-<p><img src="20206/突击101.jpg" width="350" height="262" /><img src="20206/突击100.jpg" width="350" height="262" /></p>
-<p><img src="20206/突击127.jpg" width="350" height="262" /><img src="20206/突击145.jpg" width="350" height="262" /></p>
-<p><img src="20206/突击133.jpg" width="350" height="262" /><img src="20206/突击129.jpg" width="550" height="262" /></p>
-<p><img src="20206/突击146.jpg" width="350" height="262" /><img src="20206/突击150.jpg" width="500" height="375" /></p>
-<p><img src="20206/突击152.jpg" width="500" height="375" /><img src="20206/突击171.jpg" width="112" height="150" /></p>
-<p><img src="20206/突击176.jpg" width="350" height="262" /><img src="20206/突击178.jpg" width="350" height="262" /></p>
-<p><img src="20206/突击179.jpg" width="500" height="375" /></p>
-<p><img src="20206/突击180.jpg" width="600" height="384" /></p>
-<p><img src="20206/突击187.jpg" width="196" height="262" /><img src="20206/突击197.jpg" width="350" height="262" /></p>
-<p><img src="20206/突击195.jpg" width="400" height="207" /></p>
-<p><img src="20206/突击207.jpg" width="350" height="262" /><img src="20206/突击194.jpg" width="800" height="600" /></p>
+<p><img loading="lazy" src="20206/突击1.jpg" width="350" height="262" /><img loading="lazy" src="20206/突击2.jpg" width="350" height="262" /></p>
+<p><img loading="lazy" src="20206/突击3.jpg" width="350" height="262" /><img loading="lazy" src="20206/突击5.jpg" width="350" height="262" /></p>
+<p><img loading="lazy" src="20206/突击12.jpg" width="350" height="262" /><img loading="lazy" src="20206/突击15.jpg" width="450" height="310" /></p>
+<p><img loading="lazy" src="20206/突击19.jpg" width="350" height="262" /><img loading="lazy" src="20206/突击22.jpg" width="350" height="262" /></p>
+<p><img loading="lazy" src="20206/突击32.jpg" width="350" height="262" /><img loading="lazy" src="20206/突击37.jpg" width="350" height="262" /></p>
+<p><img loading="lazy" src="20206/突击35.jpg" width="350" height="262" /><img loading="lazy" src="20206/突击40.jpg" width="350" height="262" /></p>
+<p><img loading="lazy" src="20206/突击42.jpg" width="350" height="262" /><img loading="lazy" src="20206/突击45.jpg" width="350" height="233" /></p>
+<p><img loading="lazy" src="20206/突击49.jpg" width="350" height="233" /><img loading="lazy" src="20206/突击50.jpg" width="350" height="233" /></p>
+<p><img loading="lazy" src="20206/突击73.jpg" width="350" height="262" /><img loading="lazy" src="20206/突击66.jpg" width="350" height="262" /></p>
+<p><img loading="lazy" src="20206/突击75.jpg" width="350" height="262" /><img loading="lazy" src="20206/突击83.jpg" width="350" height="262" /></p>
+<p><img loading="lazy" src="20206/突击90.jpg" width="233" height="310" /><img loading="lazy" src="20206/突击88.jpg" width="233" height="310" /><img loading="lazy" src="20206/突击92.jpg" width="233" height="310" /></p>
+<p><img loading="lazy" src="20206/突击99.jpg" width="350" height="262" /><img loading="lazy" src="20206/突击103.jpg" width="350" height="262" /></p>
+<p><img loading="lazy" src="20206/突击101.jpg" width="350" height="262" /><img loading="lazy" src="20206/突击100.jpg" width="350" height="262" /></p>
+<p><img loading="lazy" src="20206/突击127.jpg" width="350" height="262" /><img loading="lazy" src="20206/突击145.jpg" width="350" height="262" /></p>
+<p><img loading="lazy" src="20206/突击133.jpg" width="350" height="262" /><img loading="lazy" src="20206/突击129.jpg" width="550" height="262" /></p>
+<p><img loading="lazy" src="20206/突击146.jpg" width="350" height="262" /><img loading="lazy" src="20206/突击150.jpg" width="500" height="375" /></p>
+<p><img loading="lazy" src="20206/突击152.jpg" width="500" height="375" /><img loading="lazy" src="20206/突击171.jpg" width="112" height="150" /></p>
+<p><img loading="lazy" src="20206/突击176.jpg" width="350" height="262" /><img loading="lazy" src="20206/突击178.jpg" width="350" height="262" /></p>
+<p><img loading="lazy" src="20206/突击179.jpg" width="500" height="375" /></p>
+<p><img loading="lazy" src="20206/突击180.jpg" width="600" height="384" /></p>
+<p><img loading="lazy" src="20206/突击187.jpg" width="196" height="262" /><img loading="lazy" src="20206/突击197.jpg" width="350" height="262" /></p>
+<p><img loading="lazy" src="20206/突击195.jpg" width="400" height="207" /></p>
+<p><img loading="lazy" src="20206/突击207.jpg" width="350" height="262" /><img loading="lazy" src="20206/突击194.jpg" width="800" height="600" /></p>
 <p>&nbsp;</p>
 <p class="style3">&nbsp;</p>
 <p class="style25">&nbsp;</p>
