--- a/20206/20206班周志上.html
+++ b/20206/20206班周志上.html
@@ -114,7 +114,7 @@
 			之教</p>
 		</div>
 		<span class="style20">
-		<img src="../sun.jpg" width="888" height="125" /></span></p>		</td>
+		<img loading="lazy" src="../sun.jpg" width="888" height="125" /></span></p>		</td>
 	</tr>
 	<tr>
 		<td colspan="3" class="style27">
@@ -169,12 +169,12 @@
 	      <br />
 	      2、家长会<br />
 	      2020年1月16日晚上举行家长会。<br />
-	      <img src="突击69.jpg" width="350" height="262" /><img src="突击68.jpg" width="350" height="262" /><br />
-	      <img src="突击65.jpg" width="350" height="262" /><img src="突击66.jpg" width="350" height="262" /><br />
+	      <img loading="lazy" src="突击69.jpg" width="350" height="262" /><img loading="lazy" src="突击68.jpg" width="350" height="262" /><br />
+	      <img loading="lazy" src="突击65.jpg" width="350" height="262" /><img loading="lazy" src="突击66.jpg" width="350" height="262" /><br />
 	      <br />
 	      3、期末班级风采展示<br />
 	      展示团队：梁云天、朱真、张晨、朱天皓、陈锦浩、汤振阳、雷俪<br />
-	      <img src="突击70.jpg" width="350" height="262" /><br />
+	      <img loading="lazy" src="突击70.jpg" width="350" height="262" /><br />
 	      <br />
 	      4、中考年班级服务团队人员调整<br />
 	      	      团支书：徐宁馨<br />
@@ -209,16 +209,16 @@
 	  <td colspan="3" bgcolor="#CCFFCC" class="style27"><p>1、全校升旗仪式<br />
 	    期末考前教育<br />
 	    2、复习<br />
-	    <img src="突击64.jpg" width="350" height="262" /><br />
+	    <img loading="lazy" src="突击64.jpg" width="350" height="262" /><br />
 	  </p>
       <p>3、期末考试<br />
         9-10日，期末考试。<br />
         <br />
         4、2020迎春亲子嘉年华<br />
         2020年1月11-12日，6班家委组织了迎春亲子嘉年华活动。<br />
-        <img src="突击71.jpg" width="350" height="260" /><img src="突击76.jpg" width="350" height="260" /><br />
-        <img src="突击72.jpg" width="350" height="262" /><img src="突击73.jpg" width="350" height="262" /><br />
-        <img src="突击74.jpg" width="350" height="262" /><img src="突击75.jpg" width="350" height="262" /><br />
+        <img loading="lazy" src="突击71.jpg" width="350" height="260" /><img loading="lazy" src="突击76.jpg" width="350" height="260" /><br />
+        <img loading="lazy" src="突击72.jpg" width="350" height="262" /><img loading="lazy" src="突击73.jpg" width="350" height="262" /><br />
+        <img loading="lazy" src="突击74.jpg" width="350" height="262" /><img loading="lazy" src="突击75.jpg" width="350" height="262" /><br />
       </p>
       </td>
   </tr>
@@ -229,7 +229,7 @@
 	  <td colspan="3" bgcolor="#CCFFCC" class="style27">1、体育期末考试<br />
 	    <br />
       2、元旦放假<br />
-      <img src="突击63.jpg" width="600" height="250" /><br />
+      <img loading="lazy" src="突击63.jpg" width="600" height="250" /><br />
       <br />
       3、学生完成自评<br /></td>
   </tr>
@@ -242,7 +242,7 @@
         2、12月25日，利用道法课10分钟，一起学习了《我是深中人》有关规章，告诫同学们要珍惜时间，珍惜青春。<br />
 	    <br />
 	    3、期末动员<br />
-        <img src="突击60.jpg" width="195" height="260" /><img src="突击61.jpg" width="195" height="260" /><br />
+        <img loading="lazy" src="突击60.jpg" width="195" height="260" /><img loading="lazy" src="突击61.jpg" width="195" height="260" /><br />
         励志手环——梦、定、力<br />
 	  运用智学网组题训练<br />
 	  制定期末目标</p>      </td>
@@ -260,7 +260,7 @@
 	    3、家委商议迎新春亲子活动<br />
 	    <br />
 	    4、家委制作宣传板报<br />
-	    <img src="突击62.jpg" width="600" height="250" /></p>	    </td>
+	    <img loading="lazy" src="突击62.jpg" width="600" height="250" /></p>	    </td>
   </tr>
 	<tr>
 	  <td colspan="3" bgcolor="#339933" class="style27">第15周</td>
@@ -271,8 +271,8 @@
 	    陈采玥、曹心爱、袁妙莹、李海正、李嘉浩、梁竣、张晨、严杏琳、潘琪子慧、朱真<br />
 	    2、语文示范课<br />
 	    12月11日周三上午第四节，语文示范课。<br />
-	    <img src="突击57.jpg" width="350" height="262" /><img src="突击59.jpg" width="350" height="262" /><br />
-	    <img src="突击58.jpg" width="350" height="262" /><br />
+	    <img loading="lazy" src="突击57.jpg" width="350" height="262" /><img loading="lazy" src="突击59.jpg" width="350" height="262" /><br />
+	    <img loading="lazy" src="突击58.jpg" width="350" height="262" /><br />
 	    <br />
 	    3、体质测试<br />
 	    学校组织体质测试<br />
@@ -291,7 +291,7 @@
 	    于越、易昀霖、李坪燃、郑晨亮、张晨、钟欣彤<br />
 	    3、最佳服务奖<br />
 	    陈锦浩、朱真、徐宁馨、王雨彤、袁妙莹、梁云天<br />
-	    <img src="突击56.jpg" width="350" height="262" /><br />
+	    <img loading="lazy" src="突击56.jpg" width="350" height="262" /><br />
 	    <br />
 	    4、阳光体育<br />
 	    家长义工协助阳光体育活动<br />
@@ -311,9 +311,9 @@
 								</video>
 	    <p><br />
 	      汉服表演，有一种飘逸的感觉——<br />
-	      <img src="突击45.jpg" width="350" height="233" /><img src="突击46.jpg" width="350" height="233" /><br />
-	      <img src="突击47.jpg" width="350" height="233" /><img src="突击48.jpg" width="350" height="233" /><br />
-	      <img src="突击49.jpg" width="350" height="233" /><img src="突击50.jpg" width="350" height="233" /></p>
+	      <img loading="lazy" src="突击45.jpg" width="350" height="233" /><img loading="lazy" src="突击46.jpg" width="350" height="233" /><br />
+	      <img loading="lazy" src="突击47.jpg" width="350" height="233" /><img loading="lazy" src="突击48.jpg" width="350" height="233" /><br />
+	      <img loading="lazy" src="突击49.jpg" width="350" height="233" /><img loading="lazy" src="突击50.jpg" width="350" height="233" /></p>
 	    <p>2、小型家长会<br />
 	    11月28日上午，A206，召开了一个小型的家长会。<br />
 	    </p>	    </td>
@@ -327,14 +327,14 @@
 	    艺体表演同学利用放学时间，在学校或小区内组织训练。<br />
 	    <br />
 	    2、制作校运会贴纸<br />
-	    <img src="突击44.jpg" width="300" height="300" /><br />
+	    <img loading="lazy" src="突击44.jpg" width="300" height="300" /><br />
 	    <br />
 	    3、门饰<br />
-	    <img src="突击51.jpg" width="195" height="260" /></p>
+	    <img loading="lazy" src="突击51.jpg" width="195" height="260" /></p>
 	    <p>4、家长会<br />
 	    2019年11月25日晚上，年级组织了期中考试后的家长会。班级会议主题是“下决心，上高中”。<br />
-	      <img src="突击52.jpg" width="350" height="262" /><img src="突击53.jpg" width="350" height="262" /><br />
-	      <img src="突击54.jpg" width="350" height="262" /><img src="突击55.jpg" width="350" height="262" /></p></td>
+	      <img loading="lazy" src="突击52.jpg" width="350" height="262" /><img loading="lazy" src="突击53.jpg" width="350" height="262" /><br />
+	      <img loading="lazy" src="突击54.jpg" width="350" height="262" /><img loading="lazy" src="突击55.jpg" width="350" height="262" /></p></td>
   </tr>
 	<tr>
 	  <td colspan="3" bgcolor="#339933" class="style27">第11周</td>
@@ -344,7 +344,7 @@
 	    11月11日，初三年级升旗。张晨同学担任荣誉升旗手。</p>
 	    <p>2、年级三人篮球赛<br />
 	    本周男女生参加三人篮球赛，男子一胜一负，女子一负。（体委完成运动会比赛报名）<br />
-	      <img src="突击42.jpg" width="350" height="262" /><img src="突击43.jpg" width="350" height="262" /></p>
+	      <img loading="lazy" src="突击42.jpg" width="350" height="262" /><img loading="lazy" src="突击43.jpg" width="350" height="262" /></p>
 	    <p>3、期中考试情况通报<br />
 	        <span class="style35">总分前十：</span>梁云天（408.6）、陈采玥、徐宁馨、汤振阳、钟欣彤、朱真、黄中睿、杨润彤、李嘉浩、张晨<br />
 	        <br />
@@ -373,7 +373,7 @@
 	    <p>2、 期中考试<br />
 	      11月7、8日期中考试</p>
 	    <p>3、“勤敬”投票<br />
-	      <img src="突击41.jpg" width="350" height="262" /></p></td>
+	      <img loading="lazy" src="突击41.jpg" width="350" height="262" /></p></td>
   </tr>
 	<tr>
 	  <td colspan="3" bgcolor="#339933" class="style27">第9周</td>
@@ -397,13 +397,13 @@
 	<tr>
 	  <td colspan="3" bgcolor="#CCFFCC" class="style27"><p>1、期中考前家长动员会<br />
 	    10月25日晚7：00-10：00，班级在A209会议室组织了第一阶段的家长交流会，会议分两个部分，首先是班主任报告，然后是期中考前动员，每位家长都知道了孩子的期中考试目标，互相探讨了家庭教育方面的经验与困惑。有20人次发言。<br />
-	    <img src="突击39.jpg" width="350" height="262" /><img src="突击40.jpg" width="350" height="262" /></p>
+	    <img loading="lazy" src="突击39.jpg" width="350" height="262" /><img loading="lazy" src="突击40.jpg" width="350" height="262" /></p>
       <p>2、加强团建<br />
         团组织成立后，为发挥其引领作用，先锋作用，家委制作了这期板报，宣传团的知识，班级团员风采、党员家长寄语等。<br />
-        <img src="突击37.jpg" width="350" height="262" /></p>
+        <img loading="lazy" src="突击37.jpg" width="350" height="262" /></p>
       <p>3、体育期中考试<br />
         10月24日下午，年级组织了期中体育考试。满分9人，84分以上30人。<br />
-          <img src="突击38.jpg" width="196" height="262" /></p>
+          <img loading="lazy" src="突击38.jpg" width="196" height="262" /></p>
       <p>4、制定期中考试目标<br />
         “向着自己的目标努力奋斗”<br />
         以333分为基本分，每位同学根据个人情况设计目标分，并将目标分告知科任老师和家长。<br />
@@ -416,7 +416,7 @@
 	<tr>
 	  <td colspan="3" bgcolor="#CCFFCC" class="style27"><p>1.初三年级升旗<br />
 	    梁云天为荣誉升旗手<br />
-	    <img src="突击35.jpg" width="350" height="262" /><img src="突击36.jpg" width="350" height="262" /></p>
+	    <img loading="lazy" src="突击35.jpg" width="350" height="262" /><img loading="lazy" src="突击36.jpg" width="350" height="262" /></p>
       <p>2.团支部成立<br />
       团支书：徐宁馨<br />
       团组委：梁云天<br />
@@ -432,7 +432,7 @@
   </tr>
 	<tr>
 	  <td colspan="3" class="style27"><p>1、第一阶段（9月）状态良好<br />
-	      <img src="突击33.jpg" width="350" height="262" /><img src="突击34.jpg" width="350" height="262" /><br />
+	      <img loading="lazy" src="突击33.jpg" width="350" height="262" /><img loading="lazy" src="突击34.jpg" width="350" height="262" /><br />
 	    总分（430）优良者：梁云天（397.4）、陈采玥、汤振阳、李嘉浩、徐宁馨、张弛斌、杨润彤、钟欣彤、陈锦浩、黄中睿、朱真、曹心爱、袁妙莹、严杏琳、张晨、李海正、李坪燃、钟宇轩、庄涵、吴宇森、潘琪子慧、王雨彤、梁竣、付洛瑜、雷俪、林怡、史墨轩。<br />
 	    <br />
 	    语文优良者：梁云天、陈采玥、朱真、黄中睿、汤振阳、庄涵、钟诗琪、李海正、钟欣彤、张晨、徐宁馨、严杏琳、李嘉浩、王雨彤、雷俪、夏浩涵、袁妙莹、朱天皓、陈锦浩。<br />
@@ -538,28 +538,28 @@
 	<tr>
 	  <td colspan="3" class="style27"><p>1、国庆主题活动——我和我的祖国<br />
 	    （1）学校庆祝活动——<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx1d6e9fa7645660fe&amp;redirect_uri=http://static.scms.sztv.com.cn/ysz/yszlm/mt/xfkb/28317075.shtml?from=singlemessage&amp;response_type=code&amp;scope=snsapi_userinfo&amp;state=STATE#wechat_redirect">放歌颂祖国，逐梦新时代</a><br />
-	    <img src="突击15.jpg" width="450" height="310" /><br />
+	    <img loading="lazy" src="突击15.jpg" width="450" height="310" /><br />
 	    （2）班级主题活动<br />
 	    营造节日气氛<br />
-	    <img src="突击28.jpg" width="350" height="262" /><img src="突击29.jpg" width="350" height="262" />家委布置</p>
-	    <p><img src="突击17.jpg" width="350" height="262" /><img src="突击18.jpg" width="150" height="200" /><img src="突击27.jpg" width="150" height="200" /><img src="突击30.jpg" width="150" height="200" /></p>
+	    <img loading="lazy" src="突击28.jpg" width="350" height="262" /><img loading="lazy" src="突击29.jpg" width="350" height="262" />家委布置</p>
+	    <p><img loading="lazy" src="突击17.jpg" width="350" height="262" /><img loading="lazy" src="突击18.jpg" width="150" height="200" /><img loading="lazy" src="突击27.jpg" width="150" height="200" /><img loading="lazy" src="突击30.jpg" width="150" height="200" /></p>
 	    <p>齐唱《我和我的祖国》<br /><br />
 <a>		<video  controls="controls" width="300px" height="250px" preload="metadata">
 		<source src="突击31.mp4" type="video/mp4">
 		</video>
 </a></p>
 	    <p>（3）家长学习读本<br />
-	      <img src="突击26.jpg" width="150" height="200" /></p>
+	      <img loading="lazy" src="突击26.jpg" width="150" height="200" /></p>
 	    <p>3.半月总结——勤与敬（30多人次受到同学的表扬）<br />  
-	      <img src="突击24.jpg" width="350" height="262" /><img src="突击16.jpg" width="350" height="262" /></p>
+	      <img loading="lazy" src="突击24.jpg" width="350" height="262" /><img loading="lazy" src="突击16.jpg" width="350" height="262" /></p>
 	    <p>4.篮球赛<br />
 	      9月29日，与12班举行了一场较为正式的篮球赛，小负。我们依然支持热爱篮球运动的真心英雄们！<br />
-            <img src="突击19.jpg" width="350" height="262" /><img src="突击20.jpg" width="350" height="262" /><br />
-              <img src="突击21.jpg" width="350" height="262" /><img src="突击22.jpg" width="350" height="262" /><br />
-                <img src="突击23.jpg" width="350" height="262" /><img src="突击32.jpg" width="350" height="262" /><br />
+            <img loading="lazy" src="突击19.jpg" width="350" height="262" /><img loading="lazy" src="突击20.jpg" width="350" height="262" /><br />
+              <img loading="lazy" src="突击21.jpg" width="350" height="262" /><img loading="lazy" src="突击22.jpg" width="350" height="262" /><br />
+                <img loading="lazy" src="突击23.jpg" width="350" height="262" /><img loading="lazy" src="突击32.jpg" width="350" height="262" /><br />
         （梁云天爸爸提供照片，更多照片见家长群）</p>
 	    <p>	      5.5-7周座位表<br />
-        <img src="突击25.jpg" width="450" height="199" /></p>
+        <img loading="lazy" src="突击25.jpg" width="450" height="199" /></p>
 	    <p><br />
       </p></td>
   </tr>
@@ -588,15 +588,15 @@
 	    9月12日上午，学校组织了一次以消防演习为主题的安全教育。</p>
 	    <p>3.教师节<br />
         9月10日，教师节，家委与学生一起给老师们送上节日的祝福。<br />
-	      <img src="突击11.jpg" width="150" height="200" /></p>
+	      <img loading="lazy" src="突击11.jpg" width="150" height="200" /></p>
 	    <p>4.从心出发<br />
 	    宣传小组将同学们的照片贴在板报上……<br />
-	      <img src="突击12.jpg" width="350" height="262" /></p>
+	      <img loading="lazy" src="突击12.jpg" width="350" height="262" /></p>
 	    <p>5.班级半月小结<br />
 	      9月12日下午自习课上，每个同学从三个方面对自己的学习做了书面的小结：明确大方向，剔除小毛病，做好眼前事。<br />
-            <img src="突击13.jpg" width="450" height="337" /></p>
+            <img loading="lazy" src="突击13.jpg" width="450" height="337" /></p>
 	    <p>6.第3-4周座位表<br />
-	      <img src="突击14.jpg" width="450" height="212" /></p></td>
+	      <img loading="lazy" src="突击14.jpg" width="450" height="212" /></p></td>
   </tr>
 	<tr>
 	  <td colspan="3" class="style28"><span class="style33">第1周 </span></td>
@@ -613,8 +613,8 @@
         <p>史：袁妙莹、朱真、陈锦浩、梁云天、王雨彤、陈采玥、吴宇森、钟欣彤、夏浩涵、李嘉浩、汤振阳、黄中睿、徐宁馨</p>
       <p>2、静校<br />
       安静，认真，有组织。<br />
-        <img src="突击5.jpg" width="350" height="262" /><img src="突击6.jpg" width="350" height="262" /><br />
-        <img src="突击7.jpg" width="350" height="262" /><img src="突击8.jpg" width="350" height="262" /></p>
+        <img loading="lazy" src="突击5.jpg" width="350" height="262" /><img loading="lazy" src="突击6.jpg" width="350" height="262" /><br />
+        <img loading="lazy" src="突击7.jpg" width="350" height="262" /><img loading="lazy" src="突击8.jpg" width="350" height="262" /></p>
       <p>3、课堂<br />
       课堂有记录，各小组组长和班委负责。本周状态很好。<br />
         <br />
@@ -628,10 +628,10 @@
 		<td colspan="3" class="style18">
 		<p class="style27">1、布置教室<br />
 		  家委曹会长组织完成<br />
-	        <img src="突击9.jpg" width="350" height="262" /><br />
+	        <img loading="lazy" src="突击9.jpg" width="350" height="262" /><br />
 		2、分组<br />
 		  3、安排座位<br />
-		  <img src="突击10.png" width="450" height="199" /></p>
+		  <img loading="lazy" src="突击10.png" width="450" height="199" /></p>
 		<p class="style27">		  4、选班委<br />
 		  班委会——班长-雷俪 副班长-梁云天 学习委员-陈采玥 卫生委员-张晨 宣传委员-朱真 钟诗琪 <br />
 体育委员-李坪燃 文娱委员-郑晨亮 生活委员-潘琪子慧 电教管理员-易昀霖 静校管理员-汤振阳 <br />
@@ -639,8 +639,8 @@
 		<p class="style27">		  5、入学考试<br />
 		  6、收作业<br />
 		  7、领书<br />
-		  <img src="突击1.jpg" width="350" height="262" /><img src="突击2.jpg" width="350" height="262" /><br />
-		  <img src="突击3.jpg" width="350" height="262" /><img src="突击4.jpg" width="350" height="262" /></p>
+		  <img loading="lazy" src="突击1.jpg" width="350" height="262" /><img loading="lazy" src="突击2.jpg" width="350" height="262" /><br />
+		  <img loading="lazy" src="突击3.jpg" width="350" height="262" /><img loading="lazy" src="突击4.jpg" width="350" height="262" /></p>
 		<p class="style27">&nbsp;</p>		</td>
 	</tr>
 	<tr>
