--- a/czjszbzrsj.html
+++ b/czjszbzrsj.html
@@ -419,7 +419,7 @@ a:hover {
 				</tr>
 				<tr>
 								<td style="width: 382px">&nbsp;</td>
-								<td class="style34"><img src="czj5.jpg" width="101" height="101" /></td>
+								<td class="style34"><img loading="lazy" src="czj5.jpg" width="101" height="101" /></td>
 								<td>&nbsp;</td>
 				</tr>
 				<tr>
@@ -429,7 +429,7 @@ a:hover {
 				</tr>
 </table>
 <div style="position: absolute; width: 1182px; height: 60px; z-index: 3; left: 23px; top: 28px; bottom: 414px;" id="layer6" class="style15">
-&nbsp;<a href="czjszbzr.html"><img src="czj5.jpg" width="106" height="104" class="style35" /></a>&nbsp;<span class="style22"><span class="style26">深圳市陈正君名班主任工作室――<span class="STYLE39">大事记</span> </span></span>&nbsp; 
+&nbsp;<a href="czjszbzr.html"><img loading="lazy" src="czj5.jpg" width="106" height="104" class="style35" /></a>&nbsp;<span class="style22"><span class="style26">深圳市陈正君名班主任工作室――<span class="STYLE39">大事记</span> </span></span>&nbsp; 
 <a href="czjszbzrzc.html">主持人</a>&nbsp; <a href="czjszbzrtu.html">图片</a>&nbsp; <a href="czjszbzrjb.html">简报</a>&nbsp;<a href="czjszbzr.html">返回</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
 
 </body>
