--- a/czjszbzrzc.html
+++ b/czjszbzrzc.html
@@ -557,7 +557,7 @@ a:hover {
 				</tr>
 				<tr>
 								<td style="width: 382px">&nbsp;</td>
-								<td width="280" class="style34"><img src="czj5.jpg" width="101" height="101" /></td>
+								<td width="280" class="style34"><img loading="lazy" src="czj5.jpg" width="101" height="101" /></td>
 								<td width="280">&nbsp;</td>
 				</tr>
 				<tr>
@@ -567,7 +567,7 @@ a:hover {
 				</tr>
 </table>
 <div style="position: absolute; width: 1203px; height: 60px; z-index: 3; left: 14px; top: 30px; bottom: 422px;" id="layer6" class="style15">
-&nbsp;<a href="czjszbzr.html"><img src="czj5.jpg" width="106" height="104" class="style35" /></a>&nbsp;<span class="style22"><span class="style26">深圳市陈正君名班主任工作室――<span class="STYLE41">主持人</span></span></span>&nbsp;&nbsp;&nbsp;<a href="czjszbzrsj.html">大事记</a>&nbsp;<a href="czjszbzrtu.html">图片</a> <a href="czjszbzrjb.html">简报</a>&nbsp;<a href="czjszbzr.html">返回</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
+&nbsp;<a href="czjszbzr.html"><img loading="lazy" src="czj5.jpg" width="106" height="104" class="style35" /></a>&nbsp;<span class="style22"><span class="style26">深圳市陈正君名班主任工作室――<span class="STYLE41">主持人</span></span></span>&nbsp;&nbsp;&nbsp;<a href="czjszbzrsj.html">大事记</a>&nbsp;<a href="czjszbzrtu.html">图片</a> <a href="czjszbzrjb.html">简报</a>&nbsp;<a href="czjszbzr.html">返回</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
 
 </body>
 
