--- a/三分天下说审美.htm
+++ b/三分天下说审美.htm
@@ -45,7 +45,7 @@
 		<div style="position: absolute; width: 68px; height: 70px; z-index: 1; left: 228px; top: 47px" id="layer1" class="style5">
 			正君<br />
 			之教</div>
-		<img src="sun.jpg" width="888" height="125" /></td>
+		<img loading="lazy" src="sun.jpg" width="888" height="125" /></td>
 	</tr>
 	<tr>
 		<td><br />
@@ -344,7 +344,7 @@ AGRycy9kb3ducmV2LnhtbFBLBQYAAAAACQAJAFQCAAAmJwAAAAA=
  <v:imagedata src="../磁盘转移/msohtmlclip1/01/clip_image001.png" o:title=""/>
  <o:lock v:ext="edit" aspectratio="f"/>
 </v:shape><![endif]--><![if !vml]>
-		<img width="274" height="77" src="clip_image002.gif" v:shapes="图示_x0020_1" /><![endif]><o:p></o:p></span></p>
+		<img loading="lazy" width="274" height="77" src="clip_image002.gif" v:shapes="图示_x0020_1" /><![endif]><o:p></o:p></span></p>
 		<p class="MsoNormal" align="left" style="text-align: left">
 		<span lang="EN-US" style="font-size: 12.0pt">&nbsp;</span><span style="font-size: 12.0pt; font-family: 华文楷体">君：<span lang="EN-US">[</span>老师展示课件，提出目标和本堂课的任务<span lang="EN-US">]</span>我们今天的课目标就是要学会用“三分天下”的方法来审美和写作。我们在日常的写作中会出这样的问题：丰富多彩，目不暇接；一叶障目，不见泰山；眼收万物，提笔千斤。所以，通过本节训练我们要学会用“分”的方法来对我们纷繁复杂的生活进行审美，并能在写作中体现出来。<span lang="EN-US"><o:p></o:p></span></span></p>
 		<p class="MsoNormal" align="left" style="text-align: left">
@@ -367,12 +367,12 @@ AGRycy9kb3ducmV2LnhtbFBLBQYAAAAACQAJAFQCAAAmJwAAAAA=
  visibility:visible'>
  <v:imagedata src="../磁盘转移/msohtmlclip1/01/clip_image003.png" o:title="图片1"/>
 </v:shape><![endif]--><![if !vml]>
-		<img width="186" height="141" src="clip_image004.gif" alt="图片1.png" v:shapes="图片_x0020_1" /><![endif]><!--[if gte vml 1]><v:shape
+		<img loading="lazy" width="186" height="141" src="clip_image004.gif" alt="图片1.png" v:shapes="图片_x0020_1" /><![endif]><!--[if gte vml 1]><v:shape
  id="图片_x0020_2" o:spid="_x0000_i1027" type="#_x0000_t75" alt="图片2.png"
  style='width:135.75pt;height:97.5pt;visibility:visible'>
  <v:imagedata src="../磁盘转移/msohtmlclip1/01/clip_image005.png" o:title="图片2"/>
 </v:shape><![endif]--><![if !vml]>
-		<img width="181" height="130" src="clip_image006.gif" alt="图片2.png" v:shapes="图片_x0020_2" /><![endif]><o:p></o:p></span></p>
+		<img loading="lazy" width="181" height="130" src="clip_image006.gif" alt="图片2.png" v:shapes="图片_x0020_2" /><![endif]><o:p></o:p></span></p>
 		<p class="MsoNormal" align="left" style="text-align: left">
 		<span lang="EN-US" style="font-size: 12.0pt"><o:p>&nbsp;</o:p></span></p>
 		<p class="MsoNormal" align="left" style="text-align: left">
