--- a/与一种情绪重逢.htm
+++ b/与一种情绪重逢.htm
@@ -90,7 +90,7 @@ p
 		</td>
 	</tr>
 	<tr>
-		<td class="style1"><img src="lian.jpg" width="888" height="230" /></td>
+		<td class="style1"><img loading="lazy" src="lian.jpg" width="888" height="230" /></td>
 	</tr>
 </table>
 
