--- a/学生创作2018前.html
+++ b/学生创作2018前.html
@@ -3894,7 +3894,7 @@ font-family:华文细黑"><span class="STYLE2">太傅大笑乐，道韫真才女
 	<span style="font-size: 16.0pt; font-family: 宋体; mso-bidi-font-family: 宋体; color: black; background: white; mso-font-kerning: 0pt">
 	种下一棵理想树</span><span lang="EN-US" style="font-size:13.5pt;font-family:宋体;mso-bidi-font-family:宋体;color:black"><o:p></o:p></span></p>
 	<p class="style81">原创：林子一（8班）、王均羽（9班）、马银炫（10班）</p>
-	<p class="style82"><img src="ls.jpg" width="300" height="168"></p>
+	<p class="style82"><img loading="lazy" src="ls.jpg" width="300" height="168"></p>
 	<p class="MsoNormal">
 	<span lang="EN-US" style="font-size: 14.0pt; color: black; background: white; mso-font-kerning: 0pt">
 	1</span><span style="font-size: 14.0pt; font-family: 宋体; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; color: black; background: white; mso-font-kerning: 0pt">班：</span><span style="font-size: 14.0pt; font-family: 宋体; mso-bidi-font-family: 宋体; color: black; background: white; mso-font-kerning: 0pt">在我的花园里</span><span lang="EN-US" style="font-size:13.5pt;font-family:宋体;
