--- a/成功力与初中超常教育.htm
+++ b/成功力与初中超常教育.htm
@@ -51,7 +51,7 @@ a:link
 		<div style="position: absolute; width: 68px; height: 70px; z-index: 1; left: 228px; top: 47px" id="layer1" class="style5">
 			正君<br />
 			之教</div>
-		<img src="sun.jpg" width="888" height="125" /></td>
+		<img loading="lazy" src="sun.jpg" width="888" height="125" /></td>
 	</tr>
 	<tr>
 		<td><br />
@@ -150,7 +150,7 @@ a:link
 		<![endif]><![if !vml]></span><![endif]>
 		<span lang="EN-US" style="font-size: 14.0pt"><o:p>&nbsp;</o:p></span></p>
 		<p class="MsoNormal" style="text-indent: 21.0pt">
-		<span lang="EN-US" style="font-size: 14.0pt"><o:p>&nbsp;</o:p></span><span lang="EN-US" style="mso-no-proof: yes"><![if !vml]><img width="282" height="244" src="clip_image002.jpg" alt="1.jpg" v:shapes="图片_x0020_0" /><![endif]></span><o:p></o:p></p>
+		<span lang="EN-US" style="font-size: 14.0pt"><o:p>&nbsp;</o:p></span><span lang="EN-US" style="mso-no-proof: yes"><![if !vml]><img loading="lazy" width="282" height="244" src="clip_image002.jpg" alt="1.jpg" v:shapes="图片_x0020_0" /><![endif]></span><o:p></o:p></p>
 		<p class="MsoNormal" style="text-indent: 21.0pt">
 		<span lang="EN-US" style="font-size: 14.0pt"><o:p>&nbsp;</o:p></span></p>
 		<p class="MsoNormal" style="text-indent: 21.0pt">
