--- a/清流/东坡志林摘要.htm
+++ b/清流/东坡志林摘要.htm
@@ -389,7 +389,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td class="style1"><img src="../lian.jpg" width="888" height="230" /></td>
+		<td class="style1"><img loading="lazy" src="../lian.jpg" width="888" height="230" /></td>
 	</tr>
 </table>
 
