--- a/班主任的核动力.htm
+++ b/班主任的核动力.htm
@@ -52,7 +52,7 @@
 		<div style="position: absolute; width: 68px; height: 70px; z-index: 1; left: 228px; top: 47px" id="layer1" class="style5">
 			正君<br />
 			之教</div>
-		<img src="sun.jpg" width="888" height="125" /></td>
+		<img loading="lazy" src="sun.jpg" width="888" height="125" /></td>
 	</tr>
 	<tr>
 		<td><br />
@@ -144,7 +144,7 @@
  <w:borderbottom type="single" width="6" xmlns:w="urn:schemas-microsoft-com:office:word"/>
  <w:borderright type="single" width="6" xmlns:w="urn:schemas-microsoft-com:office:word"/>
 </v:shape><![endif]--><![if !vml]>
-		<img width="282" height="244" src="clip_image002.jpg" alt="1.jpg" v:shapes="图片_x0020_0" /><![endif]>1<span style="mso-spacerun: yes">&nbsp;&nbsp;
+		<img loading="lazy" width="282" height="244" src="clip_image002.jpg" alt="1.jpg" v:shapes="图片_x0020_0" /><![endif]>1<span style="mso-spacerun: yes">&nbsp;&nbsp;
 		</span><!--[if gte vml 1]><v:shape id="图片_x0020_1"
  o:spid="_x0000_i1026" type="#_x0000_t75" alt="教学联动布局.jpg" style='width:212.25pt;
  height:183pt;visibility:visible' o:bordertopcolor="#4f81bd" o:borderleftcolor="#4f81bd"
@@ -155,7 +155,7 @@
  <w:borderbottom type="single" width="6" xmlns:w="urn:schemas-microsoft-com:office:word"/>
  <w:borderright type="single" width="6" xmlns:w="urn:schemas-microsoft-com:office:word"/>
 </v:shape><![endif]--><![if !vml]>
-		<img width="285" height="246" src="clip_image004.jpg" alt="教学联动布局.jpg" v:shapes="图片_x0020_1" /><![endif]>2</span><b style="mso-bidi-font-weight: normal"><span lang="EN-US" style="font-size: 12.0pt; mso-bidi-font-size: 11.0pt; font-family: 宋体"><o:p></o:p></span></b></p>
+		<img loading="lazy" width="285" height="246" src="clip_image004.jpg" alt="教学联动布局.jpg" v:shapes="图片_x0020_1" /><![endif]>2</span><b style="mso-bidi-font-weight: normal"><span lang="EN-US" style="font-size: 12.0pt; mso-bidi-font-size: 11.0pt; font-family: 宋体"><o:p></o:p></span></b></p>
 		<p class="MsoNormal" align="left" style="text-align: left; text-indent: 24.0pt">
 		<b style="mso-bidi-font-weight: normal">
 		<span lang="EN-US" style="font-size: 12.0pt; mso-bidi-font-size: 11.0pt; font-family: 宋体"><o:p>
