--- a/语文教育是实践之学.htm
+++ b/语文教育是实践之学.htm
@@ -50,7 +50,7 @@
 		<div style="position: absolute; width: 68px; height: 70px; z-index: 1; left: 228px; top: 47px" id="layer1" class="style5">
 			正君<br />
 			之教</div>
-		<img src="sun.jpg" width="888" height="125" /></td>
+		<img loading="lazy" src="sun.jpg" width="888" height="125" /></td>
 	</tr>
 	<tr>
 		<td><br />
