--- a/2018.html
+++ b/2018.html
@@ -58,34 +58,34 @@ a:hover {
 <p class="style3">&nbsp;&nbsp;&nbsp;</p>
 <p class="style32">&nbsp;</p>
 <div style="position: absolute; width: 1077px; height: 60px; z-index: 3; left: 64px; top: 32px; bottom: 414px;" id="layer6" class="style15">
-  <p><img src="a.jpg" width="125" height="125" />&nbsp;<span class="style22">仁义礼智信 正大自光明 &nbsp;</span>&nbsp;&nbsp;<span class="STYLE34">2018届8班</span>&nbsp;&nbsp; <a href="桃李天下.html">返回前页</a>&nbsp;&nbsp;
+  <p><img loading="lazy" src="a.jpg" width="125" height="125" />&nbsp;<span class="style22">仁义礼智信 正大自光明 &nbsp;</span>&nbsp;&nbsp;<span class="STYLE34">2018届8班</span>&nbsp;&nbsp; <a href="桃李天下.html">返回前页</a>&nbsp;&nbsp;
     <a href="czjszbzrsp.html"></a>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;</p>
 </div>
-<p><img src="jpg/2018/(108).jpg" width="450" height="300" /> <img src="jpg/2018/(109).jpg" width="450" height="300" /></p>
-<p><img src="jpg/2018/(110).jpg" width="450" height="300" /> <img src="jpg/2018/(111).jpg" width="450" height="300" /></p>
-<p><img src="jpg/2018/(112).jpg" width="450" height="300" /> <img src="jpg/2018/(113).jpg" width="450" height="300" /></p>
-<p><img src="jpg/2018/(115).jpg" width="450" height="300" /> <img src="jpg/2018/(114).jpg" width="450" height="300" /></p>
-<p><img src="jpg/2018/(116).jpg" width="450" height="300" /> <img src="jpg/2018/(117).jpg" width="450" height="300" /></p>
-<p><img src="jpg/2018/(118).jpg" width="450" height="300" /> <img src="jpg/2018/(126).jpg" width="450" height="300" /></p>
-<p><img src="jpg/2018/(127).jpg" width="450" height="300" /> <img src="jpg/2018/(129).jpg" width="450" height="300" /></p>
-<p><img src="jpg/2018/(131).jpg" width="450" height="300" /> <img src="jpg/2018/(132).jpg" width="450" height="300" /></p>
-<p><img src="jpg/2018/(135).jpg" width="450" height="300" /> <img src="jpg/2018/(133).jpg" width="450" height="300" /></p>
-<p><img src="jpg/2018/(142).jpg" width="450" height="300" /> <img src="jpg/2018/(143).jpg" width="450" height="300" /></p>
-<p><img src="jpg/2018/(158).jpg" width="450" height="300" /> <img src="jpg/2018/(162).jpg" width="450" height="300" /></p>
-<p><img src="jpg/2018/(163).jpg" width="450" height="300" /> <img src="jpg/2018/(164).jpg" width="450" height="300" /></p>
-<p><img src="jpg/2018/(171).jpg" width="450" height="300" /> <span class="style25"><img src="jpg/2018/(172).jpg" width="450" height="300" /></span></p>
-<p><img src="jpg/2018/(175).jpg" width="450" height="300" /> <img src="jpg/2018/(176).jpg" width="450" height="300" /></p>
-<p><img src="jpg/2018/(177).jpg" width="450" height="300" /> <img src="jpg/2018/(181).jpg" width="450" height="300" /></p>
-<p><img src="jpg/2018/(1575).jpg" width="450" height="300" /> <img src="jpg/2018/(1574).jpg" width="450" height="300" /></p>
-<p><img src="jpg/2018/(1571).jpg" width="450" height="300" /> <img src="jpg/2018/(1576).jpg" width="450" height="300" /></p>
-<p><img src="jpg/2018/(1577).jpg" width="450" height="300" /> <img src="jpg/2018/(1580).jpg" width="450" height="300" /></p>
-<p><img src="jpg/2018/(1581).jpg" width="450" height="300" /> <img src="jpg/2018/(1582).jpg" width="450" height="300" /></p>
-<p><img src="jpg/2018/(1589).jpg" width="450" height="300" /> <img src="jpg/2018/(1587).jpg" width="450" height="300" /></p>
-<p><img src="jpg/2018/(2018189).jpg" width="450" height="300" /> <img src="jpg/2018/(20181592).jpg" width="450" height="300" /></p>
-<p><img src="jpg/2018/(149).jpg" width="300" height="450" /> <img src="jpg/2018/(144).jpg" width="300" height="450" /> <img src="jpg/2018/(150).jpg" width="300" height="450" /></p>
-<p><img src="jpg/2018/(153).jpg" width="300" height="450" /> <img src="jpg/2018/(156).jpg" width="300" height="450" /> <img src="jpg/2018/(1578).jpg" width="300" height="450" /></p>
-<p><img src="jpg/2018/(1586).jpg" width="300" height="450" /> <img src="jpg/2018/(1584).jpg" width="300" height="450" /> <img src="jpg/2018/(151).jpg" width="300" height="450" /></p>
+<p><img loading="lazy" src="jpg/2018/(108).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2018/(109).jpg" width="450" height="300" /></p>
+<p><img loading="lazy" src="jpg/2018/(110).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2018/(111).jpg" width="450" height="300" /></p>
+<p><img loading="lazy" src="jpg/2018/(112).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2018/(113).jpg" width="450" height="300" /></p>
+<p><img loading="lazy" src="jpg/2018/(115).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2018/(114).jpg" width="450" height="300" /></p>
+<p><img loading="lazy" src="jpg/2018/(116).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2018/(117).jpg" width="450" height="300" /></p>
+<p><img loading="lazy" src="jpg/2018/(118).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2018/(126).jpg" width="450" height="300" /></p>
+<p><img loading="lazy" src="jpg/2018/(127).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2018/(129).jpg" width="450" height="300" /></p>
+<p><img loading="lazy" src="jpg/2018/(131).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2018/(132).jpg" width="450" height="300" /></p>
+<p><img loading="lazy" src="jpg/2018/(135).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2018/(133).jpg" width="450" height="300" /></p>
+<p><img loading="lazy" src="jpg/2018/(142).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2018/(143).jpg" width="450" height="300" /></p>
+<p><img loading="lazy" src="jpg/2018/(158).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2018/(162).jpg" width="450" height="300" /></p>
+<p><img loading="lazy" src="jpg/2018/(163).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2018/(164).jpg" width="450" height="300" /></p>
+<p><img loading="lazy" src="jpg/2018/(171).jpg" width="450" height="300" /> <span class="style25"><img loading="lazy" src="jpg/2018/(172).jpg" width="450" height="300" /></span></p>
+<p><img loading="lazy" src="jpg/2018/(175).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2018/(176).jpg" width="450" height="300" /></p>
+<p><img loading="lazy" src="jpg/2018/(177).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2018/(181).jpg" width="450" height="300" /></p>
+<p><img loading="lazy" src="jpg/2018/(1575).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2018/(1574).jpg" width="450" height="300" /></p>
+<p><img loading="lazy" src="jpg/2018/(1571).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2018/(1576).jpg" width="450" height="300" /></p>
+<p><img loading="lazy" src="jpg/2018/(1577).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2018/(1580).jpg" width="450" height="300" /></p>
+<p><img loading="lazy" src="jpg/2018/(1581).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2018/(1582).jpg" width="450" height="300" /></p>
+<p><img loading="lazy" src="jpg/2018/(1589).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2018/(1587).jpg" width="450" height="300" /></p>
+<p><img loading="lazy" src="jpg/2018/(2018189).jpg" width="450" height="300" /> <img loading="lazy" src="jpg/2018/(20181592).jpg" width="450" height="300" /></p>
+<p><img loading="lazy" src="jpg/2018/(149).jpg" width="300" height="450" /> <img loading="lazy" src="jpg/2018/(144).jpg" width="300" height="450" /> <img loading="lazy" src="jpg/2018/(150).jpg" width="300" height="450" /></p>
+<p><img loading="lazy" src="jpg/2018/(153).jpg" width="300" height="450" /> <img loading="lazy" src="jpg/2018/(156).jpg" width="300" height="450" /> <img loading="lazy" src="jpg/2018/(1578).jpg" width="300" height="450" /></p>
+<p><img loading="lazy" src="jpg/2018/(1586).jpg" width="300" height="450" /> <img loading="lazy" src="jpg/2018/(1584).jpg" width="300" height="450" /> <img loading="lazy" src="jpg/2018/(151).jpg" width="300" height="450" /></p>
 <p class="style3">&nbsp;</p>
 <p class="style25">&nbsp;</p>
 <p class="style25">&nbsp;</p>
