--- a/czjszbzr.html
+++ b/czjszbzr.html
@@ -142,22 +142,22 @@ a:hover {
 <p class="style32">&nbsp;</p>
 <p class="style32">&nbsp;</p>
 <p class="style32">&nbsp;</p>
-<div id="Layer3"><img src="jpg/工作室/深创张萃.jpg" width="134" height="176" /></div>
-<div id="Layer8"><img src="jpg/工作室/孔祥渊导师.jpg" width="134" height="176" /></div>
-<p class="style3"><img src="jpg/工作室/工作室人员分布图.jpg" width="922" height="634" /></p>
-<div id="Layer10"><img src="jpg/工作室/深中金朝阳.jpg" width="134" height="176" /><img src="jpg/工作室/深中初中刘元.jpg" width="134" height="176" /><img src="jpg/工作室/深中彭凯.jpg" width="134" height="176" /></div>
-<div id="Layer7"><img src="jpg/工作室/二实陈昕.jpg" width="134" height="176" /></div>
-<div id="Layer6"><img src="jpg/工作室/亚迪陈柏梁.jpg" width="134" height="176" /></div>
-<div id="Layer4"><img src="jpg/工作室/宝龙巫老师.jpg" width="134" height="176" /></div>
-<div id="Layer2"><img src="jpg/工作室/深大附中聂老师.jpg" width="134" height="176" /></div>
-<div id="Layer1"><img src="jpg/工作室/育新毛武毅.jpg" width="134" height="176" /></div>
-<div id="Layer5"><img src="jpg/工作室/坪外陈慧君.jpg" width="134" height="176" /></div>
-<div id="Layer9"><img src="jpg/工作室/实验余明发.jpg" width="134" height="176" /></div>
+<div id="Layer3"><img loading="lazy" src="jpg/工作室/深创张萃.jpg" width="134" height="176" /></div>
+<div id="Layer8"><img loading="lazy" src="jpg/工作室/孔祥渊导师.jpg" width="134" height="176" /></div>
+<p class="style3"><img loading="lazy" src="jpg/工作室/工作室人员分布图.jpg" width="922" height="634" /></p>
+<div id="Layer10"><img loading="lazy" src="jpg/工作室/深中金朝阳.jpg" width="134" height="176" /><img loading="lazy" src="jpg/工作室/深中初中刘元.jpg" width="134" height="176" /><img loading="lazy" src="jpg/工作室/深中彭凯.jpg" width="134" height="176" /></div>
+<div id="Layer7"><img loading="lazy" src="jpg/工作室/二实陈昕.jpg" width="134" height="176" /></div>
+<div id="Layer6"><img loading="lazy" src="jpg/工作室/亚迪陈柏梁.jpg" width="134" height="176" /></div>
+<div id="Layer4"><img loading="lazy" src="jpg/工作室/宝龙巫老师.jpg" width="134" height="176" /></div>
+<div id="Layer2"><img loading="lazy" src="jpg/工作室/深大附中聂老师.jpg" width="134" height="176" /></div>
+<div id="Layer1"><img loading="lazy" src="jpg/工作室/育新毛武毅.jpg" width="134" height="176" /></div>
+<div id="Layer5"><img loading="lazy" src="jpg/工作室/坪外陈慧君.jpg" width="134" height="176" /></div>
+<div id="Layer9"><img loading="lazy" src="jpg/工作室/实验余明发.jpg" width="134" height="176" /></div>
 <p class="style3">&nbsp;&nbsp;&nbsp;</p>
-<div id="Layer11"><img src="jpg/工作室/陈正君.jpg" width="134" height="176" /></div>
+<div id="Layer11"><img loading="lazy" src="jpg/工作室/陈正君.jpg" width="134" height="176" /></div>
 <p class="style32">&nbsp;</p>
 <div style="position: absolute; width: 1192px; height: 60px; z-index: 3; left: 24px; top: 32px; bottom: 414px;" id="layer6" class="style15">
-&nbsp;<img src="czj5.jpg" width="106" height="104" />&nbsp;&nbsp;<span class="style22"><span class="style26">深圳市陈正君名班主任工作室</span>&nbsp;</span>&nbsp;<a href="czjszbzrsj.html">大事记</a>&nbsp;&nbsp;<a href="czjszbzrzc.html">主持人</a>&nbsp; <a href="czjszbzrtu.html">图片</a>&nbsp;<a href="czjszbzrjb.html">简报</a>&nbsp;<a href="index.html">返回首页</a></div>
+&nbsp;<img loading="lazy" src="czj5.jpg" width="106" height="104" />&nbsp;&nbsp;<span class="style22"><span class="style26">深圳市陈正君名班主任工作室</span>&nbsp;</span>&nbsp;<a href="czjszbzrsj.html">大事记</a>&nbsp;&nbsp;<a href="czjszbzrzc.html">主持人</a>&nbsp; <a href="czjszbzrtu.html">图片</a>&nbsp;<a href="czjszbzrjb.html">简报</a>&nbsp;<a href="index.html">返回首页</a></div>
 <p class="style32">&nbsp;</p>
 <p class="style3">&nbsp;</p>
 <p class="style3">&nbsp;</p>
