--- a/czjszbzrsp.html
+++ b/czjszbzrsp.html
@@ -78,7 +78,7 @@ a:hover {
 								<source src="shenghong.ogg" type="video/ogg">
 								</video></a></td>
 								<td class="style34">
-								<img src="jpg/工作室/工作室4.jpg" width="333" height="250" /></td>
+								<img loading="lazy" src="jpg/工作室/工作室4.jpg" width="333" height="250" /></td>
 				</tr>
 				<tr>
 								<td style="width: 382px" class="style34">&nbsp;</td>
@@ -94,11 +94,11 @@ a:hover {
 				</tr>
 				<tr>
 								<td style="width: 382px" class="style34">
-								<img src="jpg/2019/班155.jpg" width="350" height="233" /></td>
+								<img loading="lazy" src="jpg/2019/班155.jpg" width="350" height="233" /></td>
 								<td class="style34">
-								<img src="jpg/2019/班162.jpg" width="350" height="233" /></td>
+								<img loading="lazy" src="jpg/2019/班162.jpg" width="350" height="233" /></td>
 								<td class="style34">
-								<img src="jpg/工作室/工作室0410.jpg" width="333" height="250" /></td>
+								<img loading="lazy" src="jpg/工作室/工作室0410.jpg" width="333" height="250" /></td>
 				</tr>
 				<tr>
 								<td style="width: 382px" class="style34">&nbsp;
@@ -135,7 +135,7 @@ a:hover {
 				</tr>
 				<tr>
 								<td style="width: 382px">&nbsp;</td>
-								<td class="style34"><img src="czj5.jpg" width="101" height="101" /></td>
+								<td class="style34"><img loading="lazy" src="czj5.jpg" width="101" height="101" /></td>
 								<td>&nbsp;</td>
 				</tr>
 				<tr>
@@ -145,7 +145,7 @@ a:hover {
 				</tr>
 </table>
 <div style="position: absolute; width: 1199px; height: 60px; z-index: 3; left: 17px; top: 34px; bottom: 390px;" id="layer6" class="style15">
-&nbsp;<a href="czjszbzr.html"><img src="czj5.jpg" width="106" height="104" class="style35" /></a>&nbsp;<span class="style22"><span class="style26">深圳市陈正君名班主任工作室――<span class="STYLE36">视频</span></span></span>&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;<a href="czjszbzr.html"><img loading="lazy" src="czj5.jpg" width="106" height="104" class="style35" /></a>&nbsp;<span class="style22"><span class="style26">深圳市陈正君名班主任工作室――<span class="STYLE36">视频</span></span></span>&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="czjszbzrsj.html">大事记</a>&nbsp;<a href="czjszbzrzc.html">主持人</a>&nbsp;<a href="czjszbzrtu.html"> 
 图片</a>&nbsp;<a href="czjszbzr.html">返回</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
 
