--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ body {
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <div style="position: absolute; width: 456px; height: 100px; z-index: 11; left: 122px; top: 188px" id="layer9">
-  <div align="left"><a href="czjszbzr.html"><img src="czj5.png" width="100" height="100" class="style2" /></a><a href="czjszbzr.html" class="style27"></a>
+  <div align="left"><a href="czjszbzr.html"><img loading="lazy" src="czj5.png" width="100" height="100" class="style2" /></a><a href="czjszbzr.html" class="style27"></a>
     <div id="Layer1"><a href="czjszbzr.html" class="style27"><span class="STYLE33">深圳市陈正君名班主任工作室</span></a><br />
      <span style="font-family: '黑体'; font-size: 14px; text-align: left; color: aliceblue">（第二批名班主持人，2019-2021）</span></div>
   </div>
