--- a/index1.html
+++ b/index1.html
@@ -155,7 +155,7 @@ body {
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <div style="position: absolute; width: 456px; height: 100px; z-index: 11; left: 122px; top: 188px" id="layer9">
-  <div align="left"><a href="czjszbzr.html"><img src="czj5.png" width="100" height="100" class="style2" /></a><a href="czjszbzr.html" class="style27"></a>
+  <div align="left"><a href="czjszbzr.html"><img loading="lazy" src="czj5.png" width="100" height="100" class="style2" /></a><a href="czjszbzr.html" class="style27"></a>
     <div id="Layer1"><a href="czjszbzr.html" class="style27"><span class="STYLE33">深圳市陈正君名班主任工作室</span></a><br />
      <span style="font-family: '黑体'; font-size: 14px; text-align: left; color: aliceblue">（第二批名班主持人，建设周期：2019-2021）</span></div>
   </div>
@@ -169,7 +169,7 @@ body {
 <p align="left" class="style29" style="width: 1129px">&nbsp;</p>
 <p><span class="style25">深圳中学<span lang="en-us" xml:lang="en-us"> </span> 陈正君&nbsp; zjchen<span lang="en-us" xml:lang="en-us">@</span>shenzhong<span lang="en-us" xml:lang="en-us">.</span>net<span lang="en-us" xml:lang="en-us">&nbsp;</span><br />
   粤ICP备07072088号（2007-2023年）<br />
-  <img src="备案图标.png" width="20" height="20" /></span><a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=44030302000900" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">粤公网安备 44030302000900号</a></p>
+  <img loading="lazy" src="备案图标.png" width="20" height="20" /></span><a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=44030302000900" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">粤公网安备 44030302000900号</a></p>
 <p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; ">&nbsp;</p>
 </body>
 
