--- a/清流/你的一面，在我的眼中.htm
+++ b/清流/你的一面，在我的眼中.htm
@@ -476,7 +476,7 @@
 	  <p></p></td>
 	</tr>
 	<tr>
-		<td class="style1"><img src="../lian.jpg" width="888" height="230" /></td>
+		<td class="style1"><img loading="lazy" src="../lian.jpg" width="888" height="230" /></td>
 	</tr>
 </table>
 
