--- a/清流/论语微摘.htm
+++ b/清流/论语微摘.htm
@@ -267,7 +267,7 @@
 	  </p></td>
 	</tr>
 	<tr>
-		<td class="style1"><img src="../lian.jpg" width="888" height="230" /></td>
+		<td class="style1"><img loading="lazy" src="../lian.jpg" width="888" height="230" /></td>
 	</tr>
 </table>
 
