--- a/清流/足球，在脚下.htm
+++ b/清流/足球，在脚下.htm
@@ -67,7 +67,7 @@
 		</span><br />	  </td>
 	</tr>
 	<tr>
-		<td class="style1"><img src="../lian.jpg" width="888" height="230" /></td>
+		<td class="style1"><img loading="lazy" src="../lian.jpg" width="888" height="230" /></td>
 	</tr>
 </table>
 
