--- a/czjszsz.html
+++ b/czjszsz.html
@@ -159,8 +159,7 @@ a:hover {
       <br />
     <span class="style18"><a href="古意.htm">古意</a></span></p>
   <p><span class="style18"><a href="古韵.htm">古韵</a></span></p>
-  <p><span class="style18"><a href="窗台小语.htm"></a></span><br />
-  <span style="line-height: 150%; font-family: 宋体; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;" class="style18">
+  <p><span class="style18"><a href="窗台小语.htm"></a></span><span style="line-height: 150%; font-family: 宋体; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;" class="style18">
     <a href="与你为邻.htm">与你为邻</a></span><span lang="EN-US" style="font-size: 12.0pt; line-height: 150%">
       <o:p><br />
         <br />
@@ -218,8 +217,6 @@ a:hover {
 	    <br />
 	    <a href="初中文言文教学需要理顺的几个关系.htm">三种关系</a><br />
 	    <br />
-	    <a href="早期教育.htm">早期教育</a><br />
-	    <br />
 	    <span class="style18"><a href="班主任的核动力.htm">班主任的核动力</a></span><br />
 	    <br />
 	    <a href="两种“时间”在语文教学中的对视.htm">两种时间</a><br />
@@ -227,8 +224,9 @@ a:hover {
       <a href="清流/论语微摘.htm">《论语》微摘</a></p>
 	<p><a href="清流/东坡志林摘要.htm">《东坡志林》摘</a></p>
 	<p><a href="清流/原本大学微言笔记.htm">《原本大学微言》摘</a></p>
-	<p><span style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt" class="style18"><a href="《非虚构写作》阅读笔记.htm">非虚构写作</a></span></p>
-	<p>&nbsp;</p>
+	<p><span style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt" class="style18"><a href="《非虚构写作》阅读笔记.htm">《<span style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt" class="style18"><a href="《非虚构写作》阅读笔记.htm">非</a></span>虚构写作</a></span><a href="《非虚构写作》阅读笔记.htm">》摘</a></p>
+	<p><a href="力行的德育（深圳中学陈正君）.htm" target="_blank">力行的德育</a></p>
+	<p><img src="jpg/工作室/工作室20201027.jpg" width="180" height="249" /></p>
 </div>
 
 </body>
